--- a/notebooks/Exponential Smoothing.ipynb
+++ b/notebooks/Exponential Smoothing.ipynb
@@ -501,9 +501,9 @@
     "- 추세를 가진 데이터를 예측할 수 있도록 ETS를 확장\n",
     "\n",
     "$$\n",
-    "Forecast\\ equation: \\hat{y}_{t+h|t}=\\ell_t+hb_t \\\\\n",
-    "Level\\ equation: \\ell_t=\\alpha y_t+(1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\n",
-    "Trend\\ equation: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)b_{t-1}\n",
+    "Forecast\\; equation: \\hat{y}_{t+h|t}=\\ell_t+hb_t \\\\\n",
+    "Level\\; equation: \\ell_t=\\alpha y_t+(1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\n",
+    "Trend\\; equation: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)b_{t-1}\n",
     "$$\n",
     "\n",
     "$$\n",
