--- a/notebooks/Exponential Smoothing.ipynb
+++ b/notebooks/Exponential Smoothing.ipynb
@@ -71,9 +71,11 @@
     "### Component form\n",
     "\n",
     "$$\n",
-    "Forecast\\ equation: \\hat{y}_{t+h|t} = \\ell_t \\\\\n",
+    "\\begin{aligned}\n",
+    "Forecast\\ equation &: \\hat{y}_{t+h|t} = \\ell_t \\\\\n",
     "\n",
-    "Smoothing\\ equation: \\ell_t = \\alpha y_t + (1 - \\alpha)\\ell_{t-1}\n",
+    "Smoothing\\ equation &: \\ell_t = \\alpha y_t + (1 - \\alpha)\\ell_{t-1}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- All forecast take the same value, equal to the last level component.\n",
@@ -748,9 +750,11 @@
     "- 추세가 미래 어느 시점에 평탄해지도록 감쇠시키는 매개변수를 도입했다.\n",
     "\n",
     "$$\n",
-    "Forecast\\ equation: \\hat{y}_{t+h|t}=\\ell_t+(\\phi+\\phi^2+\\cdots+\\phi^h)b_t \\\\\n",
-    "Level\\ equation: \\ell_t=\\alpha y_t+(1-\\alpha)(\\ell_{t-1}+\\phi b_{t-1}) \\\\\n",
-    "Trend\\ equation: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)\\phi b_{t-1}\n",
+    "\\begin{aligned}\n",
+    "Forecast\\ equation &: \\hat{y}_{t+h|t}=\\ell_t+(\\phi+\\phi^2+\\cdots+\\phi^h)b_t \\\\\n",
+    "Level\\ equation &: \\ell_t=\\alpha y_t+(1-\\alpha)(\\ell_{t-1}+\\phi b_{t-1}) \\\\\n",
+    "Trend\\ equation &: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)\\phi b_{t-1}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- If $\\phi=1$, the method is identical to Holt's linear method.\n",
@@ -864,20 +868,24 @@
     "\n",
     "### Additive Method\n",
     "$$\n",
-    "Forecast\\ equation: \\hat{y}_{t+h|t}=\\ell_t+hb_t+s_{t+h-m(k+1)} \\\\\n",
-    "Level\\ equation: \\ell_t=\\alpha (y_t-s_{t-m})+(1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\n",
-    "Trend\\ equation: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)b_{t-1} \\\\\n",
-    "Seasonality\\ equation: s_t=\\gamma(y_t-\\ell_{t-1}-b_{t-1})+(1-\\gamma)s_{t-m} \n",
+    "\\begin{aligned}\n",
+    "Forecast\\ equation &: \\hat{y}_{t+h|t}=\\ell_t+hb_t+s_{t+h-m(k+1)} \\\\\n",
+    "Level\\ equation &: \\ell_t=\\alpha (y_t-s_{t-m})+(1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\n",
+    "Trend\\ equation &: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)b_{t-1} \\\\\n",
+    "Seasonality\\ equation &: s_t=\\gamma(y_t-\\ell_{t-1}-b_{t-1})+(1-\\gamma)s_{t-m} \n",
+    "\\end{aligned}\n",
     "$$\n",
     "- m denote the period of seasonality\n",
     "- $k = (h-1) / m$\n",
     "\n",
     "### Multiplicative Method\n",
     "$$\n",
-    "Forecast\\ equation: \\hat{y}_{t+h|t}=(\\ell_t+hb_t)s_{t+h-m(k+1)} \\\\\n",
-    "Level\\ equation: \\ell_t=\\alpha \\frac{y_t}{s_{t-m}}+(1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\n",
-    "Trend\\ equation: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)b_{t-1} \\\\\n",
-    "Seasonality\\ equation: s_t=\\gamma \\frac{y_t}{\\ell_{t-1}+b_{t-1}}+(1-\\gamma)s_{t-m}\n",
+    "\\begin{aligned}\n",
+    "Forecast\\ equation &: \\hat{y}_{t+h|t}=(\\ell_t+hb_t)s_{t+h-m(k+1)} \\\\\n",
+    "Level\\ equation &: \\ell_t=\\alpha \\frac{y_t}{s_{t-m}}+(1-\\alpha)(\\ell_{t-1}+b_{t-1}) \\\\\n",
+    "Trend\\ equation &: b_t=\\beta^*(\\ell_t-\\ell_{t-1})+(1-\\beta^*)b_{t-1} \\\\\n",
+    "Seasonality\\ equation &: s_t=\\gamma \\frac{y_t}{\\ell_{t-1}+b_{t-1}}+(1-\\gamma)s_{t-m}\n",
+    "\\end{aligned}\n",
     "$$"
    ]
   },
@@ -1178,14 +1186,18 @@
     "\n",
     "- Recall the component form of simple exponential smoothing:\n",
     "$$\n",
-    "Forecast\\ equation = \\ell_t \\\\\n",
-    "Smoothing\\ equation = \\ell_t = \\alpha y_t + (1 - \\alpha)\\ell_{t-1}\n",
+    "\\begin{aligned}\n",
+    "Forecast\\ equation &: \\ell_t \\\\\n",
+    "Smoothing\\ equation &: \\ell_t = \\alpha y_t + (1 - \\alpha)\\ell_{t-1}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- If we re-arrange the smoothing equation for the level, we get the \"error correction\" form.\n",
     "$$\n",
-    "\\ell_t = \\ell_{t-1} + \\alpha (y_t - \\ell_{t-1}) = \\ell_{t-1} + \\alpha e_t \\\\\n",
-    "where\\ e_t = y_t - \\ell_{t-1} = y_t - \\hat{y}_{t|t-1}\n",
+    "\\begin{aligned}\n",
+    "\\ell_t &= \\ell_{t-1} + \\alpha (y_t - \\ell_{t-1}) = \\ell_{t-1} + \\alpha e_t \\\\\n",
+    "where\\ e_t &= y_t - \\ell_{t-1} = y_t - \\hat{y}_{t|t-1}\n",
+    "\\end{aligned}\n",
     "$$"
    ]
   },
