--- a/notebooks/ARIMA Models.ipynb
+++ b/notebooks/ARIMA Models.ipynb
@@ -323,9 +323,10 @@
     "\n",
     "- A seasonal difference is the difference between an observation and the corresponding observation from the previous year.\n",
     "$$\n",
-    "y_t' = y_t - y_{t-m} \\\\\n",
-    "\n",
-    "m\\ =\\ number\\ of\\ seasons\n",
+    "\\begin{aligned}\n",
+    "y_t' &= y_t - y_{t-m} \\\\\n",
+    "m\\ &=\\ number\\ of\\ seasons\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- Seasonally difference series will have $T - m$ obs.\n",
