--- a/notebooks/ARIMA Models.ipynb
+++ b/notebooks/ARIMA Models.ipynb
@@ -600,12 +600,14 @@
    "id": "97c8609c",
    "metadata": {},
    "source": [
-    "### Random Wal Model with draft\n",
+    "### Random Walk Model with draft\n",
     "\n",
     "- A closely related model allows the differences to have a non zero-mean\n",
     "$$\n",
-    "y_t - y_{t-1} = c + \\epsilon_t \\quad or\\\\\n",
-    "y_t = c + y_{t-1} + \\epsilon_t\n",
+    "\\begin{aligned}\n",
+    "& y_t - y_{t-1} = c + \\epsilon_t \\quad or\\\\\n",
+    "& y_t = c + y_{t-1} + \\epsilon_t\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- $y_t$ will tend to drift upwards. However, if c is negative, $y_t$ will tend to drift downwards."
@@ -748,7 +750,6 @@
     "$$\n",
     "\\begin{aligned}\n",
     "y_t &= c + \\phi_1y_{t-1} + \\phi_2y_{t-2} + \\cdots + \\phi_py_{t-p} + \\epsilon_t \\\\\n",
-    "   \n",
     "E(y_t) &= E(c + \\phi_1y_{t-1} + \\phi_2y_{t-2} + \\cdots + \\phi_py_{t-p} + \\epsilon_t) \\\\\n",
     "\\mu &= c + \\phi_1\\mu + \\phi_2\\mu + \\cdots + \\phi_p\\mu \\\\\n",
     "\\mu &= \\frac{c}{1 - \\phi_1 - \\phi_2 - \\cdots - \\phi_p}\n",
