--- a/notebooks/Exponential Smoothing.ipynb
+++ b/notebooks/Exponential Smoothing.ipynb
@@ -1195,8 +1195,8 @@
     "- If we re-arrange the smoothing equation for the level, we get the \"error correction\" form.\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\ell_t &= \\ell_{t-1} + \\alpha (y_t - \\ell_{t-1}) = \\ell_{t-1} + \\alpha e_t \\\\\n",
-    "where\\ e_t &= y_t - \\ell_{t-1} = y_t - \\hat{y}_{t|t-1}\n",
+    "& \\ell_t = \\ell_{t-1} + \\alpha (y_t - \\ell_{t-1}) = \\ell_{t-1} + \\alpha e_t \\\\\n",
+    "& where\\ e_t = y_t - \\ell_{t-1} = y_t - \\hat{y}_{t|t-1}\n",
     "\\end{aligned}\n",
     "$$"
    ]
