--- a/notebooks/ARIMA Models.ipynb
+++ b/notebooks/ARIMA Models.ipynb
@@ -777,13 +777,15 @@
     "- $S_c(\\phi, \\mu)$ 함수를 $\\mu$에 대해 미분하여 이를 최소화하는 $\\mu$의 값을 구한다.\n",
     "\n",
     "$$\n",
-    "2 \\sum_{t=2}^{n}[(y_t - \\mu) - \\phi(y_{t-1} - \\mu)] (\\phi - 1) = 0 \\\\\n",
-    "(\\phi - 1)\\sum_{t=2}^{n}y_t - (\\phi - 1)\\sum_{t=2}^{n}\\mu - \\phi(\\phi - 1)\\sum_{t=2}^{n}y_{t-1} + \\phi(\\phi - 1)\\sum_{t=2}^{n}\\mu = 0 \\\\\n",
-    "\\sum_{t=2}^{n}y_t - (n-1)\\mu - \\phi\\sum_{t=2}^{n}y_{t-1} + \\phi(n-1)\\mu = 0 \\\\\n",
-    "\\sum_{t=2}^{n}y_t - \\phi\\sum_{t=2}^{n}y_{t-1} = (n - 1)\\mu(1 - \\phi) \\\\\n",
-    "\\mu = \\frac{1}{(n - 1)(1 - \\phi)} (\\sum_{t=2}^{n}y_t - \\phi\\sum_{t=2}^{n}y_{t-1}) \\\\\n",
-    "\\therefore \\hat{\\mu} = \\frac{1}{(n - 1)(1 - \\phi)} (\\sum_{t=2}^{n}y_t - \\phi\\sum_{t=2}^{n}y_{t-1}) \\\\\n",
-    "\\hat{\\mu} = \\frac{1}{(n - 1)} \\sum_{t=2}^ny_t \\qquad \\because \\sum_{t=2}^ny_t \\approx \\sum_{t=2}^ny_{t-1}\n",
+    "\\begin{aligned}\n",
+    "& 2 \\sum_{t=2}^{n}[(y_t - \\mu) - \\phi(y_{t-1} - \\mu)] (\\phi - 1) = 0 \\\\\n",
+    "& (\\phi - 1)\\sum_{t=2}^{n}y_t - (\\phi - 1)\\sum_{t=2}^{n}\\mu - \\phi(\\phi - 1)\\sum_{t=2}^{n}y_{t-1} + \\phi(\\phi - 1)\\sum_{t=2}^{n}\\mu = 0 \\\\\n",
+    "& \\sum_{t=2}^{n}y_t - (n-1)\\mu - \\phi\\sum_{t=2}^{n}y_{t-1} + \\phi(n-1)\\mu = 0 \\\\\n",
+    "& \\sum_{t=2}^{n}y_t - \\phi\\sum_{t=2}^{n}y_{t-1} = (n - 1)\\mu(1 - \\phi) \\\\\n",
+    "& \\mu = \\frac{1}{(n - 1)(1 - \\phi)} (\\sum_{t=2}^{n}y_t - \\phi\\sum_{t=2}^{n}y_{t-1}) \\\\\n",
+    "& \\therefore \\hat{\\mu} = \\frac{1}{(n - 1)(1 - \\phi)} (\\sum_{t=2}^{n}y_t - \\phi\\sum_{t=2}^{n}y_{t-1}) \\\\\n",
+    "& \\hat{\\mu} = \\frac{1}{(n - 1)} \\sum_{t=2}^ny_t \\qquad \\because \\sum_{t=2}^ny_t \\approx \\sum_{t=2}^ny_{t-1}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- For large n, $\\hat{\\mu} \\approx \\bar{Y}$, regardless of the value of $\\phi$.\n",
@@ -791,10 +793,12 @@
     "- $S_c(\\phi, \\mu)$ 함수를 $\\phi$에 대해 미분하여 이를 최소화하는 $\\phi$의 값을 구한다.\n",
     "\n",
     "$$\n",
-    "-2 \\sum_{t=2}^{n}[(y_t - \\mu) - \\phi(y_{t-1} - \\mu)] (y_{t-1} - \\mu) = 0 \\\\\n",
-    "\\sum_{t=2}^{n}(y_t - \\mu)(y_{t-1} - \\mu) - \\phi\\sum_{t=2}^{n}(y_{t-1} - \\mu)^2 = 0 \\\\\n",
-    "\\phi = \\frac{\\sum_{t=2}^{n}(y_t - \\mu)(y_{t-1} - \\mu)}{\\sum_{t=2}^{n}(y_{t-1} - \\mu)^2} \\\\\n",
-    "\\therefore \\hat{\\phi} = \\frac{\\sum_{t=2}^{n}(y_t - \\mu)(y_{t-1} - \\mu)}{\\sum_{t=2}^{n}(y_{t-1} - \\mu)^2}\n",
+    "\\begin{aligned}\n",
+    "& -2 \\sum_{t=2}^{n}[(y_t - \\mu) - \\phi(y_{t-1} - \\mu)] (y_{t-1} - \\mu) = 0 \\\\\n",
+    "& \\sum_{t=2}^{n}(y_t - \\mu)(y_{t-1} - \\mu) - \\phi\\sum_{t=2}^{n}(y_{t-1} - \\mu)^2 = 0 \\\\\n",
+    "& \\phi = \\frac{\\sum_{t=2}^{n}(y_t - \\mu)(y_{t-1} - \\mu)}{\\sum_{t=2}^{n}(y_{t-1} - \\mu)^2} \\\\\n",
+    "& \\therefore \\hat{\\phi} = \\frac{\\sum_{t=2}^{n}(y_t - \\mu)(y_{t-1} - \\mu)}{\\sum_{t=2}^{n}(y_{t-1} - \\mu)^2}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "- n이 클수록, $\\hat{\\phi} \\approx \\frac{\\sum_{t=2}^{n}(y_t - \\bar{y})(y_{t-1} - \\bar{y})}{\\sum_{t=2}^{n}(y_{t-1} - \\bar{y})^2}$이다."
