--- a/notebooks/Exponential Smoothing.ipynb
+++ b/notebooks/Exponential Smoothing.ipynb
@@ -27,40 +27,23 @@
    "source": [
     "### Weighted average form\n",
     "\n",
-    "$$\n",
-    "\\hat{y}_{T+1|T}=\\alpha y_T+\\alpha(1-\\alpha)y_{T-1}+\\alpha(1-\\alpha)^2 y_{T-2}+\\cdots\n",
-    "$$\n",
+    "$$\\hat{y}_{T+1|T}=\\alpha y_T+\\alpha(1-\\alpha)y_{T-1}+\\alpha(1-\\alpha)^2 y_{T-2}+\\cdots$$\n",
     "\n",
-    "$$\n",
-    "\\hat{y}_{T+1|T}=\\alpha y_T+(1-\\alpha)\\{\\alpha y_T + \\alpha(1-\\alpha)y_{T-2}+\\cdots\\}\n",
-    "$$\n",
+    "$$\\hat{y}_{T+1|T}=\\alpha y_T+(1-\\alpha)\\{\\alpha y_T + \\alpha(1-\\alpha)y_{T-2}+\\cdots\\}$$\n",
     "\n",
-    "$$\n",
-    "\\hat{y}_{T+1|T}=\\alpha y_T+(1-\\alpha)\\hat{y}_{T|T-1}\n",
-    "$$\n",
+    "$$\\hat{y}_{T+1|T}=\\alpha y_T+(1-\\alpha)\\hat{y}_{T|T-1}$$\n",
     "\n",
     "- The process has to start somewhere, so we let the first fitted value at time 1 be denoted by $\\ell_0$.\n",
     "\n",
+    "$$\\hat{y}_{2|1} = \\alpha y_1 + (1 - \\alpha)\\ell_0$$\n",
     "\n",
-    "$$\n",
-    "\\hat{y}_{2|1} = \\alpha y_1 + (1 - \\alpha)\\ell_0\n",
-    "$$\n",
+    "$$\\hat{y}_{3|2} = \\alpha y_2 + (1 - \\alpha)\\hat{y}_{2|1}$$\n",
     "\n",
-    "$$\n",
-    "\\hat{y}_{3|2} = \\alpha y_2 + (1 - \\alpha)\\hat{y}_{2|1}\n",
-    "$$\n",
+    "$$\\vdots$$\n",
     "\n",
-    "$$\n",
-    "\\vdots\n",
-    "$$\n",
+    "$$\\hat{y}_{T|T-1} = \\alpha y_{T-1} + (1 - \\alpha)\\hat{y}_{T-1|T-2}$$\n",
     "\n",
-    "$$\n",
-    "\\hat{y}_{T|T-1} = \\alpha y_{T-1} + (1 - \\alpha)\\hat{y}_{T-1|T-2}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\hat{y}_{T+1|T} = \\alpha y_T + (1 - \\alpha)\\hat{y}_{T|T-1}\n",
-    "$$"
+    "$$\\hat{y}_{T+1|T} = \\alpha y_T + (1 - \\alpha)\\hat{y}_{T|T-1}$$"
    ]
   },
   {
@@ -73,7 +56,6 @@
     "$$\n",
     "\\begin{aligned}\n",
     "Forecast\\ equation &: \\hat{y}_{t+h|t} = \\ell_t \\\\\n",
-    "\n",
     "Smoothing\\ equation &: \\ell_t = \\alpha y_t + (1 - \\alpha)\\ell_{t-1}\n",
     "\\end{aligned}\n",
     "$$\n",
@@ -103,7 +85,7 @@
     "- We find the values of the unknown parameters and the initial values that minimize\n",
     "\n",
     "$$\n",
-    "\\textbf{SSE} = \\sum_{t=1}^T \\left(y_t - \\hat{y}_{t|t-1} \\right)^2 = \\sum_{t=1}^T e_t^2\n",
+    "\\text{SSE} = \\sum_{t=1}^T \\left(y_t - \\hat{y}_{t|t-1} \\right)^2 = \\sum_{t=1}^T e_t^2\n",
     "$$"
    ]
   },
