--- a/notebooks/ARIMA Models.ipynb
+++ b/notebooks/ARIMA Models.ipynb
@@ -325,7 +325,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "y_t' &= y_t - y_{t-m} \\\\\n",
-    "m\\ &=\\ number\\ of\\ seasons\n",
+    "m\\ &= \\text{number of seasons}\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
