--- a/notebooks/Prophet.ipynb
+++ b/notebooks/Prophet.ipynb
@@ -28,7 +28,9 @@
     "## The Trend Model\n",
     "\n",
     "- Nonlinear, Saturating Growth\n",
+    "\n",
     "    - Nonlinear growth that saturates at a carrying capacity.\n",
+    "    \n",
     "    - Logistic growth model  \n",
     "$$\n",
     "\\begin{gathered}\n",
@@ -115,7 +117,7 @@
     "\n",
     "logistic 함수가 끊기지 않고 이어지도록 하기 위해서는 이전 구간의 logistic 함수가 $s_j$에서 가지는 값과 다음 구간의 logistic 함수가 $s_j$에서 가지는 값이 서로 동일해야 하므로 \n",
     "$$\n",
-    "(k + \\sum_{l < j}\\delta_l)(s_j - m_{j-1}) = (k + \\sum_{j <= j}\\delta_l)(s_j - (m_{j-1} - \\gamma_j))\n",
+    "(k + \\sum_{l < j}\\delta_l)(s_j - m_{j-1}) = (k + \\sum_{j <= j}\\delta_l)(s_j - (m_{j-1} + \\gamma_j))\n",
     "$$  \n",
     "\n",
     "$a = k + \\sum_{l < j}\\delta_l,\\ b = s_j - m_{j-1}$로 놓고 정리하면 \n",
@@ -128,7 +130,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "1 - \\frac{k + \\sum_{l < j}\\delta_l}{k + \\sum_{l <= j}\\delta_l} = \\frac{(k + \\sum_{l <= j}\\delta_l) - (k + \\sum_{l < j}\\delta_l)}{k + \\sum_{l <= j}\\delta_l} = \\frac{\\sum_{l <= j}\\delta_l - \\sum_{l < j}\\delta_l}{k + \\sum_{l <=j}\\delta_l} = \\frac{\\delta_j}{k + \\sum_{l <= j}\\delta_l} \\text{ 이고}\n",
+    "\\frac{\\delta_j}{k + \\sum_{l <= j}\\delta_l} = \\frac{\\sum_{l <= j}\\delta_l - \\sum_{l < j}\\delta_l}{k + \\sum_{l <=j}\\delta_l} = \\frac{(k + \\sum_{l <= j}\\delta_l) - (k + \\sum_{l < j}\\delta_l)}{k + \\sum_{l <= j}\\delta_l} = 1 - \\frac{k + \\sum_{l < j}\\delta_l}{k + \\sum_{l <= j}\\delta_l} \\text{ 이고}\n",
     "$$  \n",
     "\n",
     "$$\n",
