--- a/notebooks/ARIMA Models.ipynb
+++ b/notebooks/ARIMA Models.ipynb
@@ -1733,13 +1733,13 @@
     "\n",
     "- The seasonal part of an AR or MA model will be seen in the seasonal lags of the PACF and ACF\n",
     "    \n",
-    "    - ARIMA (0, 0, 0)(0, 0, 1)$_12$ will show:\n",
+    "    - ARIMA (0, 0, 0)(0, 0, 1)$_{12}$ will show:\n",
     "\n",
     "        - A spike at lag 12 in the ACF but no other significant spikes\n",
     "\n",
     "        - The PACF will show exponential decay in the seasonal lags(12, 24, 36, ...)\n",
     "    \n",
-    "    - ARIMA (0, 0, 0,)(1, 0, 0)$_12$ will show:\n",
+    "    - ARIMA (0, 0, 0,)(1, 0, 0)$_{12}$ will show:\n",
     "\n",
     "        - Exponential decay in the seasonal lags of the ACF\n",
     "        \n",
